@@ -1,3 +1,10 @@
+[16.May 2009]
+- gfx/panel/*, gfx/apple.png: added more elements of Ingo's improvements
+  on BottomPanel
+- gfx/panel/energypunkt.png renamed to "energypoint_red.png"
+- bpvikingview.rb: added Ingo's energy points (exactly: background and blue 
+  extra point)
+
 [10.May 2009]
 - bpvikingview.rb, trash.rb, gfx/panel/*: adding Ingo's improvements 
   on BottomPanel;
